force-app/main/default/objects/Job__c/fields/Allowed_Backlogs__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Backlogs__c</fullName>
    <label>Allowed Backlogs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>