force-app/main/default/objects/Job__c/fields/Eligible_Branches__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Branches__c</fullName>
    <label>Eligible Branches</label>
    <length>100</length>
    <type>Text</type>
</CustomField>